[tool.poetry]
name = "deepxde"
version = "1.7.0"
description = "A library for scientific machine learning and physics-informed learning"
authors = ["Miguel Vilar <mavilarr@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.6.1"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"
scikit-optimize = ">=0.9.0"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["rope", "pyflakes", "mccabe", "pycodestyle", "pydocstyle", "flake8", "pylint"], version = "^1.5.0"}
pylsp-mypy = "^0.6.2"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.2.1"
pyls-memestra = "^0.0.16"
pylsp-rope = "^0.1.9"
pytest = "^7.1.2"
ipython = "^8.4.0"
jupyterlab = "^3.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
